# Papildoma

./: CMakeLists.txt  Mylib.h  README.md  darb_su_fail.cpp  darb_su_fail.h  domains.txt  generavimas.cpp  generavimas.h  ivest_tikrinimai.cpp  laboratorinis_v0.2.cpp  main.cpp  mylib.h  papildoma.cpp  prad_duom.cpp  prad_duom.h  stdnt.cpp  stdnt.h  tekstas.txt  v0.1 - arrays.cpp  v0.1 - vectors.cpp
Failai (is anksto sugeneruoti)/: studentai10k.txt  studentai1k.txt
patobulintas vector/: ivest_tikrinimai.h  main.cpp  stdnt.cpp
v1.0 - deque/: darb_su_fail.cpp  darb_su_fail.h  generavimas.cpp  main.cpp  mylib.h  prad_duom.cpp  prad_duom.h  stdnt.cpp  stdnt.h
v1.0 - list/: darb_su_fail.h  main.cpp  prad_duom.cpp  prad_duom.h  stdnt.cpp
v1.0 - patobulintas vektorius/: darb_su_fail.cpp
v1.0 - vector/: darb_su_fail.h  main.cpp  prad_duom.cpp  prad_duom.h  stdnt.cpp
